--- a/SeSACWeek4-API/Base.lproj/Main.storyboard
+++ b/SeSACWeek4-API/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Iab-f3-IjV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xjA-3r-EK3">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
@@ -285,6 +285,94 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h22-sv-jdk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3241.9847328244273" y="-21.126760563380284"/>
+        </scene>
+        <!--Transtlationpicker View Controller-->
+        <scene sceneID="T3c-ZP-G8A">
+            <objects>
+                <viewController id="xjA-3r-EK3" customClass="transtlationpickerViewController" customModule="SeSACWeek4_API" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3Rx-Wg-Hd1">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S7O-Cs-Zcz">
+                                <rect key="frame" x="16" y="79" width="361" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fMg-43-Uzo">
+                                <rect key="frame" x="16" y="133" width="361" height="250"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="Atc-4N-Afr"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qEc-zF-H7j">
+                                <rect key="frame" x="16" y="403" width="361" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ezN-05-n87">
+                                <rect key="frame" x="16" y="512" width="361" height="250"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="x98-Li-81z"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iDZ-rs-0bm">
+                                <rect key="frame" x="16" y="458" width="361" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7Bb-dq-5Cs"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="ezN-05-n87" firstAttribute="leading" secondItem="7Bb-dq-5Cs" secondAttribute="leading" constant="16" id="1FW-GX-OPV"/>
+                            <constraint firstItem="7Bb-dq-5Cs" firstAttribute="trailing" secondItem="iDZ-rs-0bm" secondAttribute="trailing" constant="16" id="1uT-Tu-VJH"/>
+                            <constraint firstItem="7Bb-dq-5Cs" firstAttribute="trailing" secondItem="ezN-05-n87" secondAttribute="trailing" constant="16" id="GVT-ji-ky3"/>
+                            <constraint firstItem="qEc-zF-H7j" firstAttribute="top" secondItem="fMg-43-Uzo" secondAttribute="bottom" constant="20" id="RU7-FI-31W"/>
+                            <constraint firstItem="S7O-Cs-Zcz" firstAttribute="top" secondItem="7Bb-dq-5Cs" secondAttribute="top" constant="20" id="UeT-C5-KbO"/>
+                            <constraint firstItem="S7O-Cs-Zcz" firstAttribute="leading" secondItem="7Bb-dq-5Cs" secondAttribute="leading" constant="16" id="bI4-zk-2zE"/>
+                            <constraint firstItem="fMg-43-Uzo" firstAttribute="top" secondItem="S7O-Cs-Zcz" secondAttribute="bottom" constant="20" id="fEI-r9-7SQ"/>
+                            <constraint firstItem="7Bb-dq-5Cs" firstAttribute="trailing" secondItem="S7O-Cs-Zcz" secondAttribute="trailing" constant="16" id="gNz-W2-ett"/>
+                            <constraint firstItem="iDZ-rs-0bm" firstAttribute="top" secondItem="qEc-zF-H7j" secondAttribute="bottom" constant="20" id="gOW-we-Yfh"/>
+                            <constraint firstItem="fMg-43-Uzo" firstAttribute="leading" secondItem="7Bb-dq-5Cs" secondAttribute="leading" constant="16" id="hJ7-87-kFS"/>
+                            <constraint firstItem="7Bb-dq-5Cs" firstAttribute="trailing" secondItem="qEc-zF-H7j" secondAttribute="trailing" constant="16" id="l7b-li-6WO"/>
+                            <constraint firstItem="ezN-05-n87" firstAttribute="top" secondItem="iDZ-rs-0bm" secondAttribute="bottom" constant="20" id="qfQ-by-aNQ"/>
+                            <constraint firstItem="fMg-43-Uzo" firstAttribute="width" secondItem="3Rx-Wg-Hd1" secondAttribute="height" multiplier="361:852" id="uZc-ol-McJ"/>
+                            <constraint firstItem="iDZ-rs-0bm" firstAttribute="leading" secondItem="7Bb-dq-5Cs" secondAttribute="leading" constant="16" id="w31-Aw-qf3"/>
+                            <constraint firstItem="qEc-zF-H7j" firstAttribute="leading" secondItem="7Bb-dq-5Cs" secondAttribute="leading" constant="16" id="wGz-CH-hyg"/>
+                            <constraint firstItem="7Bb-dq-5Cs" firstAttribute="trailing" secondItem="fMg-43-Uzo" secondAttribute="trailing" constant="16" id="ysB-yC-Mot"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="lJ3-fN-yAw" appends="YES" id="MHP-Ay-WmO"/>
+                        </connections>
+                    </view>
+                    <connections>
+                        <outlet property="currentLanguage" destination="S7O-Cs-Zcz" id="LjR-ER-Ohq"/>
+                        <outlet property="currentText" destination="fMg-43-Uzo" id="Fub-Bc-6Kd"/>
+                        <outlet property="resultLanguage" destination="iDZ-rs-0bm" id="6i8-za-PF2"/>
+                        <outlet property="resultText" destination="ezN-05-n87" id="zgL-6Z-2bZ"/>
+                        <outlet property="translateButton" destination="qEc-zF-H7j" id="znS-Zx-wrd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eFL-3b-aPI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="lJ3-fN-yAw">
+                    <connections>
+                        <action selector="tapGesture:" destination="xjA-3r-EK3" id="ESA-eE-ese"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="4365.6488549618316" y="-14.084507042253522"/>
         </scene>
     </scenes>
     <resources>
