--- a/SeSACWeek4-API/Base.lproj/Main.storyboard
+++ b/SeSACWeek4-API/Base.lproj/Main.storyboard
@@ -314,6 +314,9 @@
                                 <rect key="frame" x="16" y="403" width="361" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="translateButtonTapped:" destination="xjA-3r-EK3" eventType="touchUpInside" id="ivd-Pz-C7X"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ezN-05-n87">
                                 <rect key="frame" x="16" y="512" width="361" height="250"/>
