각 텍스트 필드에서 입력을 누르면 키보드가 내려가고 취소를 누르면 값이 지워지고 키보드가 내려가도록 설정

--- a/SeSACWeek4-API/Base.lproj/Main.storyboard
+++ b/SeSACWeek4-API/Base.lproj/Main.storyboard
@@ -358,6 +358,7 @@
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="lJ3-fN-yAw" appends="YES" id="MHP-Ay-WmO"/>
+                            <outletCollection property="gestureRecognizers" destination="lJ3-fN-yAw" appends="YES" id="kdF-x2-rwy"/>
                         </connections>
                     </view>
                     <connections>
