kakao viedo API codable로 변경

--- a/SeSACWeek4-API/Base.lproj/Main.storyboard
+++ b/SeSACWeek4-API/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xjA-3r-EK3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7jL-KW-9SV">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
@@ -220,6 +220,60 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kQK-aw-H9T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2046.564885496183" y="1.4084507042253522"/>
+        </scene>
+        <!--Async View Controller-->
+        <scene sceneID="nnv-ph-eCT">
+            <objects>
+                <viewController id="Pnf-bj-89a" customClass="AsyncViewController" customModule="SeSACWeek4_API" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GMR-FB-WdL">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UBJ-zP-Gzr">
+                                <rect key="frame" x="118" y="79.000000000000014" width="157" height="157.33333333333337"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="UBJ-zP-Gzr" secondAttribute="height" multiplier="1:1" id="TcN-1h-ZSw"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B1k-fR-THT">
+                                <rect key="frame" x="76" y="502" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MMT-el-poE">
+                                <rect key="frame" x="112" y="672" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M7n-eF-nvf">
+                                <rect key="frame" x="241" y="672" width="75" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="buttonClicked:" destination="Pnf-bj-89a" eventType="touchUpInside" id="8I9-bb-dZ1"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C4v-uk-ZqM">
+                                <rect key="frame" x="76" y="327" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Bwd-fs-A9r"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="UBJ-zP-Gzr" firstAttribute="top" secondItem="Bwd-fs-A9r" secondAttribute="top" constant="20" id="69g-UX-Dxd"/>
+                            <constraint firstItem="UBJ-zP-Gzr" firstAttribute="width" secondItem="GMR-FB-WdL" secondAttribute="width" multiplier="0.4" id="ZIw-oA-PN6"/>
+                            <constraint firstItem="UBJ-zP-Gzr" firstAttribute="centerX" secondItem="GMR-FB-WdL" secondAttribute="centerX" id="mul-p2-Dgs"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="first" destination="UBJ-zP-Gzr" id="htA-VB-Acw"/>
+                        <outlet property="second" destination="C4v-uk-ZqM" id="cKa-Ep-ayt"/>
+                        <outlet property="third" destination="B1k-fR-THT" id="eAe-e7-k14"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6bg-pi-f4J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2049.6183206106871" y="748.59154929577471"/>
         </scene>
         <!--Translation View Controller-->
         <scene sceneID="iKl-5q-lb1">
